--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         ::-webkit-scrollbar-track { background: #1e293b; }
         ::-webkit-scrollbar-thumb { background: #475569; border-radius: 3px; }
         ::-webkit-scrollbar-thumb:hover { background: #64748b; }
+
+        /* Correction pour les tuiles qui ne chargent pas */
+        .leaflet-tile-container img {
+            will-change: transform; /* Optimisation GPU */
+        }
     </style>
 </head>
 <body>
@@ -94,7 +99,7 @@
             ]
         };
 
-        // Icônes SVG simples pour éviter les dépendances lourdes
+        // Icônes SVG simples
         const Icons = {
             Users: () => <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>,
             AlertTriangle: () => <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>,
@@ -114,25 +119,47 @@
             const mapInstanceRef = useRef(null);
             const markersRef = useRef([]);
 
-            // Init Carte
+            // Init Carte avec options optimisées
             useEffect(() => {
                 if (!mapInstanceRef.current && window.L) {
                     const map = window.L.map(mapContainerRef.current, {
                         center: [-20.960, 55.650],
                         zoom: 13,
                         zoomControl: false,
-                        attributionControl: false
+                        attributionControl: false,
+                        // Optimisation: Evite de charger trop de tuiles pendant le déplacement
+                        fadeAnimation: true,
+                        markerZoomAnimation: true
                     });
 
                     // Fond de carte Satellite (ESRI - Gratuit)
+                    // Optimisation: keepBuffer (garde des tuiles en cache) et updateWhenIdle (attend la fin du pan pour charger)
                     window.L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
                         attribution: 'Tiles &copy; Esri',
-                        maxZoom: 18
+                        maxZoom: 18,
+                        minZoom: 10,
+                        updateWhenIdle: false, // Charger immédiatement pour fluidité si connexion OK
+                        keepBuffer: 10         // Garde beaucoup plus de tuiles en mémoire (cache large)
                     }).addTo(map);
 
                     mapInstanceRef.current = map;
                     updateMarkers(map);
+
+                    // IMPORTANT: Force le redimensionnement après un court délai pour éviter les zones grises
+                    setTimeout(() => {
+                        map.invalidateSize();
+                    }, 200);
                 }
+
+                // Gestion du redimensionnement de la fenêtre
+                const handleResize = () => {
+                    if (mapInstanceRef.current) {
+                        mapInstanceRef.current.invalidateSize();
+                    }
+                };
+                window.addEventListener('resize', handleResize);
+                return () => window.removeEventListener('resize', handleResize);
+
             }, []);
 
             // Mise à jour vue
@@ -144,7 +171,6 @@
             }, [mapCenter]);
 
             const updateMarkers = (map) => {
-                // Nettoyage
                 markersRef.current.forEach(m => m.remove());
                 markersRef.current = [];
 
